# FinCon

./: .gitignore  CMakeLists.txt  README.md  TESTING.md
.agents/skills/FinCon/: SKILL.md
.agents/skills/FinCon/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: FinCon-instincts.yaml
.codex/: AGENTS.md
src/: main.cpp
src/core/: AdditionalMockProducers.h  BrokerManager.h  CrashHandler.cpp  CrashHandler.h  CredentialManager.cpp  CredentialManager.h  DataHub.cpp  DataHub.h  DomainInterfaces.h  DomainStubs.h  FinConMarketModel.cpp  FinConMarketModel.h  FinConMockQuoteProducer.cpp  FinConMockQuoteProducer.h  Logger.cpp  Logger.h  MarketModel.cpp  MarketModel.h  MockQuoteProducer.cpp  Persistence.cpp  Persistence.h  Result.h  ThemeManager.cpp  ThemeManager.h
src/network/: HttpClient.h  WebSocketClient.h
src/nodes/: WorkflowValidator.h
src/screens/: IScreen.cpp  IScreen.h  MCPScreen.h  NodeEditorScreen.cpp  NodeEditorScreen.h  QuantLibSuiteScreen.cpp  QuantLibSuiteScreen.h  ScreenFactory.cpp  ScreenFactory.h  Screens.cpp  Screens.h
src/services/: AuthService.cpp  AuthService.h  NotificationManager.h  PythonRunner.cpp  PythonRunner.h
src/tests/: FinConSystemTests.cpp
src/ui/: CommandBar.cpp  CommandBar.h  MainWindow.cpp  MainWindow.h  NavigationBar.cpp  NavigationBar.h  Sidebar.cpp  Sidebar.h  StatusBar.cpp  StatusBar.h
